--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
 }
 .weather-icon{
     width: 170px;
-    margin-top: 30px;
+    margin-top: 5px;
 }
 .weather h1{
     font-size: 80px;
@@ -61,12 +61,16 @@ body{
     font-weight: 400;
     margin-top: -10px;
 }
+.weather h3{
+    padding: 0 20px;
+    margin-top: 4px;    
+}
 .details{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 .col{
     display: flex;
@@ -80,4 +84,14 @@ body{
 .humidity, .wind{
     font-size: 28px;
     margin-top: -6px;
+}
+.weather{
+    display: none;
+}
+.error{
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
 }
